Make bundled javafx